--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -10,3 +10,7 @@ Heiko Scherrer;
 
 [[overview]]
 = Overview
+
+This guide describes the RESTful API of the OpenWMS.org Transportation module and its usage. Some general terms and definitions
+are explained and declared in the first part of the document whereas in the second part the usage of the API is shown in
+a more use-case-driven approach.
