--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -96,7 +96,7 @@ service.
 image::rest-model.png[]
 
 [[resources-to]]
-== TransportOrders
+== TransportOrder
 The main resource of the TMS Transportation module is the `TransportOrder`. A `TransportOrder` is used in automated warehouses to move `TransportUnits`
 between `Locations`. Automated warehouses means a Material Flow Controller (MFC, see (Material Flow)[https://en.wikipedia.org/wiki/Material_flow]) uses
 `TransportOrders` to route and track the movements within the warehouse. In manual warehouse OpenWMS.org uses `Movements` to track this in a manually.
@@ -109,7 +109,7 @@ The attributes of the `TransportOrder` representation:
 | `persistentKey`
 | A synthetic unique key that identifies `TransportOrder`. May be replaced with self-links in future.
 
-| `transportUnit`
+| `transportUnitId`
 | The unique identifier of the TransportUnit that is carried. May be replaced with a link in future.
 
 | `priority`
