--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -1,12 +1,18 @@
-= RESTful API
+= OpenWMS.org TMS: RESTful API (Transportation Service)
 ({bversion}-{bnumber})
 Heiko Scherrer;
 :doctype: book
+:icons: font
 :toc:
 :sectanchors:
 :sectlinks:
 :toclevels: 2
 :source-highlighter: highlightjs
+
+Copyright © 2005-2019
+
+Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies
+and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically.
 
 [[overview]]
 = Overview
